--- a/src/app/features/admin/admin-playlists/playlist-detail/playlist-detail.component.scss
+++ b/src/app/features/admin/admin-playlists/playlist-detail/playlist-detail.component.scss
@@ -1,6 +1,7 @@
 /* Add styles for playlist-detail component here */
 .container {
   padding: 20px;
+  color: #848383;
 }
 
 h1 {
