--- a/src/app/features/admin/admin-playlists/view-playlists/view-playlists.scss
+++ b/src/app/features/admin/admin-playlists/view-playlists/view-playlists.scss
@@ -1,10 +1,12 @@
 /* Add styles for view-playlists component here */
 .container {
   padding: 20px;
+  color: #848383;
 }
 
 h1 {
   margin-bottom: 20px;
+  color: #848383;
 }
 
 .loading-indicator,
