--- a/src/app/features/admin/admin-team/edit-team/edit-team.scss
+++ b/src/app/features/admin/admin-team/edit-team/edit-team.scss
@@ -1,6 +1,7 @@
 h2{
     margin-top: 100px;
     text-align: center;
+    color: #848383;
 }
 /* Centering the form on the page */
 .edit-team-member-wrapper {
