--- a/src/app/features/admin/admin-team/view-team/view-team.scss
+++ b/src/app/features/admin/admin-team/view-team/view-team.scss
@@ -3,7 +3,7 @@ h2 {
   text-align: center;
   font-size: 2rem;
   margin-bottom: 2rem;
-  color: #1a202c;
+  color: #848383;
 }
 
 div[ngif] {
